--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -1,17 +1,18 @@
 @use 'base/variables' as v;
 
 .boton-amarillo{
-    @include boton($amarillo, block)
+    @include boton($amarillo, block);
 }
 
 .boton-amarillo-inline{
-    @include boton($amarillo, inline-block)
+    @include boton($amarillo, inline-block);
 }
 
 .boton-verde{
-    @include boton($verde, inline-block)
+    @include boton($verde, inline-block);
 }
 
 .boton-rojo-block{
-    @include boton($rojo, block)
+    @include boton($rojo, block);
+    width: 100%;
 }
