--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -10,7 +10,7 @@
 
 .header{
     background-color: $grisOscuro;
-    padding: 1rem 0 3rem 0;
+    padding: 0 0 3rem 0;
 
     &.inicio{
     background-position: center center;
