--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -1,7 +1,7 @@
 @use 'base/mixins' as m;
 
 .barra{
-    padding-top: 3rem;
+    // padding-top: 3rem;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -11,11 +11,17 @@
         align-items: flex-end;
     }
 
-    .logo-header{
-        max-width: 100%;
-        width: 28rem;
-        height: auto;
+    a{
+        .logo-header{
+            max-width: 100%;
+            width: 20rem;
+            height: auto;
+            position: relative;
+            top: 3rem;
+        }
+        margin-top:0;
     }
+    
 }
 
 .derecha{
