CRUD barcos completo

--- a/src/scss/internas/_admin.scss
+++ b/src/scss/internas/_admin.scss
@@ -19,7 +19,8 @@ table.propiedades{
     margin-top: 4rem;
     border-spacing: 0;
     width: 100%;
-
+    text-align: center;
+    
     thead{
         background-color: $verde;
 
