--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,47 +1,40 @@
-@use 'base/mixins' as m;
-
-.no-webp .inicio{
-    background-image: url('../img/header.jpg');
+.no-webp .inicio {
+    background-image: url(../img/header.jpg);
+}
+.webp .inicio {
+    background-image: url(../img/header.webp);
 }
 
-.webp .inicio{
-    background-image: url('../img/header.webp');
-}
-
-.header{
+.header {
     background-color: $grisOscuro;
-    padding: 0 0 3rem 0;
+    padding: 1rem 0 3rem 0;
 
-    &.inicio{
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    &.inicio {
+        background-position: center center;
+        background-size: cover;
 
-        @include m.tablet{
-            min-height: 50rem;
+        @include tablet {
+            min-height: 70rem;
         }
 
-    .contenido-header{
-        @include m.tablet{
-            min-height: 50rem;
+        .contenido-header {
+            @include tablet {
+                min-height: 70rem;
+            }
         }
     }
-
-    }
-
 }
 
-.contenido-header{
+.contenido-header {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
-
-
-    h1{
-        color: $blanco;
+    h1 {
         text-align: left;
+        color: $blanco;
         font-weight: $bold;
+        line-height: 2;
         max-width: 60rem;
     }
 }
