--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -1,18 +1,19 @@
-@use 'base/variables' as v;
-
-.boton-amarillo{
-    @include boton($amarillo, block);
-}
-
-.boton-amarillo-inline{
+.boton-amarillo {
     @include boton($amarillo, inline-block);
 }
 
-.boton-verde{
+.boton-amarillo-block {
+    @include boton($amarillo, block);
+}
+
+.boton-verde {
     @include boton($verde, inline-block);
 }
 
-.boton-rojo-block{
-    @include boton($rojo, block);
-    width: 100%;
+.boton-rojo-block {
+   @include boton($rojo, block);
+   width: 100%;
+}
+.boton-verde-block {
+    @include boton($verde, block);
 }
