--- a/src/scss/base/_darkMode.scss
+++ b/src/scss/base/_darkMode.scss
@@ -1,35 +1,47 @@
-.dark-mode{
+.dark-mode {
     background-color: darken($grisOscuro, 10);
 
-    p{
+    p {
         color: $blanco;
     }
 
-    a,h1,h2,h3,h4{
+    a, h1,h2,h3,h4  {
         color: $gris;
     }
 
-    .anuncio, .resumen-propiedad{
+    .anuncio, 
+    .resumen-propiedad {
         background-color: $grisOscuro;
         border: 1px solid $grisOscuro;
 
-        .precio{
+        .precio {
             color: $verde;
         }
-
-        .icono{
+        .icono {
             filter: invert(100%);
         }
     }
+    
 
-    .texto-nosotros h4{
+    .texto-nosotros blockquote {
         color: $blanco;
     }
+   
+    .formulario {
+        label,
+        legend,
+        p {
+            color: $gris;
+        }
 
-    .formulario{
-        label,legend,p{
-            color:$gris;
+        input:not([type="submit"]), 
+        textarea,
+        select {
+            background-color: $grisOscuro;
+            border: 1px solid $grisOscuro;
+            color: $blanco;
         }
     }
-    
+
+  
 }
