--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -1,54 +1,40 @@
-@use 'variables' as v;
-
-@mixin telefono{
-    @media (min-width: 480px){
+/** Media Queries **/
+@mixin telefono {
+    @media (min-width: #{$telefono}) {
         @content;
     }
 }
 
-@mixin tablet{
-    @media (min-width: 768px){
+@mixin tablet {
+    @media (min-width: #{$tablet}) {
         @content;
     }
 }
-
-@mixin desktop{
-    @media (min-width: 992px){
+  
+@mixin desktop {
+    @media (min-width: #{$desktop}) {
         @content;
     }
 }
-
-@mixin desktopXL{
-    @media (min-width: 1200px){
-        @content;
-    }
-}
-
-@mixin grid($columnas,$espaciado){
+@mixin grid($columnas, $espaciado ) {
     display: grid;
-    grid-template-columns: repeat($columnas,1fr);
     gap: $espaciado;
+    grid-template-columns: repeat($columnas, 1fr);
 }
 
-@mixin resetear-lista{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-@mixin boton($bgcolor, $display){
-    background-color: $bgcolor;
-    color: v.$blanco;
-    font-weight: v.$bold;
+@mixin boton($bgColor, $display ) {
+    background-color: $bgColor;
+    color: $blanco;
+    font-weight: $bold;
     text-decoration: none;
     padding: 1rem 3rem;
     text-align: center;
-    margin-top: calc(v.$separacion / 2);
+    margin-top: $separacion / 2;
     display: $display;
     border: none;
 
-    &:hover{
-        background-color: darken($bgcolor,5);
+    &:hover {
+        background-color: darken($bgColor, 5);
         cursor: pointer;
     }
 }
