--- a/src/scss/base/_utilidades.scss
+++ b/src/scss/base/_utilidades.scss
@@ -1,15 +1,16 @@
 .seccion {
-    margin-top: calc($separacion / 2);
-    margin-bottom: calc($separacion / 2);
+    margin-top: $separacion / 2;
+    margin-bottom: $separacion / 2;
 }
 .contenido-centrado {
-    max-width: 800px;
+    max-width: 80rem;
 }
 
-.alinear-derecha{
-    text-align: right;
+.alinear-derecha {
+    display: flex;
+    justify-content: flex-end;
 }
 
-.w-100{
+.w-100 {
     width: 100%;
 }
