--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
 
 // Fuentes
@@ -13,13 +14,14 @@ $negro: #000000;
 $amarillo: #E08709;;
 $verde: #71B100;
 $blanco: #FFFFFF;
-$gris: #d6d6d6;
+$gris: #e1e1e1;
 $grisOscuro: #333333;
-$rojo: rgb(175, 8, 8);
+$rojo: rgb(189, 7, 7);
 
 $separacion: 5rem;
 
 // Fuentes
+
 $delgada: 300;
 $regular : 400;
 $bold: 700;
