--- a/src/scss/internas/_admin.scss
+++ b/src/scss/internas/_admin.scss
@@ -1,43 +1,39 @@
-.alerta{
+.alerta {
+    padding: .5rem;
     text-align: center;
     color: $blanco;
+    font-weight: $bold;
     text-transform: uppercase;
-    font-weight: bold;
-    margin: 1rem;
-    padding: .5rem;
+    margin: 1rem 0;
 
-    &.error{
+    &.error {
         background-color: $rojo;
     }
 
-    &.exito{
+    &.exito {
         background-color: $verde;
     }
 }
 
-table.propiedades{
+table.propiedades {
     margin-top: 4rem;
-    border-spacing: 0;
     width: 100%;
-    text-align: center;
-    
-    thead{
+    border-spacing: 0;
+
+    thead {
         background-color: $verde;
 
-        th{
+        th {
             color: $blanco;
-            padding: 1.5rem;
+            padding: 2rem;
         }
-
-
     }
 
-    .imagen-tabla{
-        width: 15rem;
+    .imagen-tabla {
+        width: 10rem;
     }
 }
 
-.imagen-pequeña{
+.imagen-small {
     width: 20rem;
-    margin: 1rem;
 }
