--- a/src/scss/layout/_anuncios.scss
+++ b/src/scss/layout/_anuncios.scss
@@ -1,51 +1,45 @@
-@use 'base/mixins' as m;
-@use 'base/variables' as v;
-
-@include m.tablet{
-    .contenedor-anuncios{
-        @include m.grid(3,4rem);
+@include tablet {
+    .contenedor-anuncios {
+        @include grid(3, 2rem);
     }
 }
 
-.anuncio{
-    background-color: lighten(v.$gris,3);
-    border: 1px solid darken(v.$gris,10);
+.anuncio {
+    background-color: lighten($gris, 5);
+    border: 1px solid darken($gris, 10);
     margin-bottom: 2rem;
 
-    .contenido-anuncio{
+    .contenido-anuncio {
         padding: 2rem;
     }
 
-    h3, p{
+    h3, p {
         margin: 0;
     }
-
+ 
 }
-
-.precio{
-    color: v.$verde;
-    font-weight: v.$bold;
+.precio {
+    color: $verde;
+    font-weight: $bold;
     font-size: 3rem;
 }
 
-.iconos-caracteristicas{
+.iconos-caracteristicas {
     display: flex;
     list-style: none;
     padding: 0;
     max-width: 40rem;
 
-
-    li{
+    li {
         flex: 1;
         display: flex;
 
-        img{
-            flex: 0 0 3rem;
-            margin-right: 0.8rem;
+        img {
+            flex:  0 0 3rem;
+            margin-right: 1rem;
         }
-        p{
-            font-weight: v.$black;
+        p {
+            font-weight: $black;
         }
-
     }
 }
