--- a/src/scss/layout/_contactar.scss
+++ b/src/scss/layout/_contactar.scss
@@ -1,29 +1,25 @@
-.no-webp .imagen-contacto{
-    background-image: url('http://localhost/bienesraices_inicio/build/img/encuentra.jpg');
+.no-webp .imagen-contacto {
+    background-image: url('../img/encuentra.jpg');
+}
+.webp .imagen-contacto {
+    background-image: url('../img/encuentra.webp');
 }
 
-.webp .imagen-contacto{
-    background-image: url('http://localhost/bienesraices_inicio/build/img/encuentra.webp');
-}
-
-
-.imagen-contacto{
+.imagen-contacto {
     background-position: center center;
-    background-repeat: no-repeat;
     background-size: cover;
-    padding: 5rem 0;
+    padding: $separacion * 2 0;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    h2{
+    h2 {
         font-size: 4rem;
         font-weight: $black;
         color: $blanco;
     }
-
-    p{
-        font-size: 2rem;
+    p {
+        font-size: 1.8rem;
         color: $blanco;
     }
 }
