--- a/src/scss/layout/_inferior.scss
+++ b/src/scss/layout/_inferior.scss
@@ -1,53 +1,50 @@
-@include tablet{
-    .seccion-inferior{
+@include tablet {
+    .seccion-inferior {
         display: grid;
         grid-template-columns: 2fr 1fr;
         column-gap: 2rem;
     }
 }
 
-.entrada-blog{
+.entrada-blog {
     margin-bottom: 2rem;
-    
-    @include tablet{
+
+    @include tablet {
         display: grid;
         grid-template-columns: 1fr 2fr;
         column-gap: 2rem;
     }
-
-    &:last-of-type{
+    &:last-of-type {
         margin-bottom: 0;
     }
 }
 
-.informacion-meta{
-    span{
+.informacion-meta {
+    span {
         color: $amarillo;
     }
 }
 
-.texto-entrada{
+.texto-entrada {
     a {
         color: $negro;
         margin-top: 2rem;
         display: block;
-        @include tablet{
+        @include tablet {
             margin-top: 0;
         }
     }
-
-    h4{
+    h4 {
         margin: 0;
-
-        &::after{
-            content:"";
+        line-height: 1.4;
+        &::after {
+            content: '';
             display: block;
-            margin-top: .5rem;
             width: 15rem;
             height: .5rem;
             background-color: $verde;
+            margin-top: 1rem;
         }
     }
-
 
 }
