--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -1,102 +1,90 @@
-@use 'base/mixins' as m;
-
-.barra{
-    // padding-top: 3rem;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    @include m.tablet{
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-end;
-    }
-
-    a{
-        .logo-header{
-            max-width: 100%;
-            width: 20rem;
-            height: auto;
-            position: relative;
-            top: 3rem;
-        }
-        margin-top:0;
-    }
-    
-}
-
-.derecha{
+.derecha {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    @include tablet{
+    @include tablet {
         align-items: flex-end;
     }
 
-    .boton-modo-oscuro{
+    .dark-mode-boton {
         width: 3rem;
-        margin-top: 2rem;
+        margin-top: 3rem;
         margin-bottom: 2rem;
         filter: invert(100%);
 
-        &:hover{
+        &:hover {
             cursor: pointer;
         }
 
-        @include tablet{
+        @include tablet {
             margin-top: 0;
         }
     }
 }
 
-.navegacion{
+.barra {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3rem;
+    @include tablet {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+}
+
+.navegacion {
+
     visibility: hidden;
     opacity: 0;
     height: 0;
-    transition: visibility .3s ease-in-out, opacity 0.5s linear, height .5s linear;
+    transition: visibility .3s ease-in-out, opacity .5s linear, height .5s linear; 
 
-    @include m.tablet{
+    @include tablet {
         display: flex;
         align-items: center;
-        visibility: visible;
         opacity: 1;
+        visibility: visible;
     }
-
-    a{
+    
+    a {
         color: $blanco;
         text-decoration: none;
         font-size: 2.2rem;
         display: block;
         text-align: center;
-        &:hover{
-            color: $verde;
-            transition: ease .2s all;
-        }
-        
-        @include m.tablet{
+
+        @include tablet {
             margin-right: 2rem;
-            &:last-of-type{
-                margin-right: 0rem;
+            font-size: 1.8rem;
+
+            &:last-of-type {
+                margin-right: 0;
             }
         }
-        
+
+        &:hover {
+            color: $verde;
+        }
     }
 }
 
-.mostrar{
-    visibility: visible;
-    opacity: 1;
-    height: auto;
-}
 
-/**Menu hamburhuesa**/
-
-.mobile-menu{
-    @include tablet{
+/** Menu de hamburguesa **/
+.mobile-menu {
+    @include tablet {
         display: none;
     }
 
-    img{
+    img {
         width: 5rem;
     }
+}
+
+.mostrar {
+    visibility: visible;
+    opacity: 1;
+    height: auto;
 }
